--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="bootstrap-wrapper">
-  <div class="container">
-    <h1>Bienvenido</h1>
-  </div>
-</div>
+<app-navbar></app-navbar>
+<app-signup></app-signup>
+<router-outlet></router-outlet>
