--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -7,41 +7,48 @@
                 </div>
 
                 <h1 class="text-center">Registrate aqui</h1>
-                <form action="">
-                    <mat-form-field class="full-width" appearance="outline">
+
+                
+                <form (ngSubmit) = "formSubmit()">
+
+                    
+                    <mat-form-field class="full-width" appearance="outline" >
                         
                         <mat-label>Nombre de usuario</mat-label>
-                        <input matInput placeholder= "Digite su nombre de usuario">
+                        <input [(ngModel)]="user.username" name="username" matInput placeholder= "Digite su nombre de usuario">
+                        <mat-hint>El nombre de usuario debe ser unico</mat-hint>
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label >Clave</mat-label>
-                        <input matInput placeholder= "Digite su clave">
+                        <input [(ngModel)]="user.password" name="password" matInput placeholder= "Digite su clave" type="password">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Nombres</mat-label>
-                        <input matInput placeholder= "Digite su nombre ">
+                        <input [(ngModel)]="user.nombre" name="nombre" matInput placeholder= "Digite su nombre ">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Apellidos</mat-label>
-                        <input matInput placeholder= "Digite su apellido">
+                        <input [(ngModel)]="user.apellido" name="apellido" matInput placeholder= "Digite su apellido">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Email</mat-label>
-                        <input matInput placeholder= "Digite su email">
+                        <input [(ngModel)]="user.email" name="email" matInput placeholder= "Digite su email" type="email">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Telefono</mat-label>
-                        <input matInput placeholder= "Digite su telefono">
+                        <input [(ngModel)]="user.telefono" name="telefono" matInput placeholder= "Digite su telefono">
                     </mat-form-field>
+
+                    
 
                     <div class="container text-center">
                         <button mat-raised-button color="primary">Registrar</button>
-                        <button style="margin-left: 20px;" mat-raised-button color="Accent">Registrar</button>
+                        <button style="margin-left: 20px;" mat-raised-button color="Accent">limpiar</button>
                     </div>
                 </form>
                 <br> <br> <br>
