--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: black; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(66, 55, 55); }
 
 .text-center{
     text-align: center;
@@ -9,4 +7,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 
 .full-width{
     width: 100%;
+    border-color: grey;
 }
