--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -15,33 +15,33 @@
                     <mat-form-field class="full-width" appearance="outline" >
                         
                         <mat-label>Nombre de usuario</mat-label>
-                        <input [(ngModel)]="user.username" name="username" matInput placeholder= "Digite su nombre de usuario">
+                        <input required [(ngModel)]="user.username" name="username" matInput placeholder= "Digite su nombre de usuario">
                         <mat-hint>El nombre de usuario debe ser unico</mat-hint>
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label >Clave</mat-label>
-                        <input [(ngModel)]="user.password" name="password" matInput placeholder= "Digite su clave" type="password">
+                        <input required [(ngModel)]="user.password" name="password" matInput placeholder= "Digite su clave" type="password">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Nombres</mat-label>
-                        <input [(ngModel)]="user.nombre" name="nombre" matInput placeholder= "Digite su nombre ">
+                        <input required [(ngModel)]="user.nombre" name="nombre" matInput placeholder= "Digite su nombre ">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Apellidos</mat-label>
-                        <input [(ngModel)]="user.apellido" name="apellido" matInput placeholder= "Digite su apellido">
+                        <input required [(ngModel)]="user.apellido" name="apellido" matInput placeholder= "Digite su apellido">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Email</mat-label>
-                        <input [(ngModel)]="user.email" name="email" matInput placeholder= "Digite su email" type="email">
+                        <input required [(ngModel)]="user.email" name="email" matInput placeholder= "Digite su email" type="email">
                     </mat-form-field>
 
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Telefono</mat-label>
-                        <input [(ngModel)]="user.telefono" name="telefono" matInput placeholder= "Digite su telefono">
+                        <input  [(ngModel)]="user.telefono" name="telefono" matInput placeholder= "Digite su telefono">
                     </mat-form-field>
 
                     
