--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,43 @@
-<p>login works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row mt20">
+            <div class="col-md-6 offset-md-3">
+                <mat-card>
+                    <div class="container text-center">
+                        <img src="../../../assets/iniciar-sesion.png" alt="" width="100"  height="100">
+
+                    </div>
+
+                    <h1 class="text-center">Inicio de Sesion</h1>
+
+                    <form action="">
+                        <mat-form-field class="full-width" appearance="outline" >
+                        
+                            <mat-label>Nombre de usuario</mat-label>
+                            <input required  name="username" matInput placeholder= "Digite su nombre de usuario">
+                            <mat-hint>El nombre de usuario debe ser valido</mat-hint>
+                        </mat-form-field>
+
+
+                        <mat-form-field class="full-width" appearance="outline" >
+                        
+                            <mat-label>Contraseña</mat-label>
+                            <input required  name="username" matInput placeholder= "Digite su contraseña">
+                            <mat-hint>La contraseña debe ser valida</mat-hint>
+                        </mat-form-field>
+
+                        <br><br>
+
+                        <div class="container text-center">
+                            <button mat-raised-button color="primary">Iniciar sesion</button>
+                            <button type="reset" style="margin-left: 20px;" mat-raised-button color="Accent">limpiar</button>
+                        </div>
+
+                    </form>
+                </mat-card>
+
+            </div>
+        </div>
+       
+    </div>
+</div>
