--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -48,7 +48,7 @@
 
                     <div class="container text-center">
                         <button mat-raised-button color="primary">Registrar</button>
-                        <button style="margin-left: 20px;" mat-raised-button color="Accent">limpiar</button>
+                        <button type="reset" style="margin-left: 20px;" mat-raised-button color="Accent">limpiar</button>
                     </div>
                 </form>
                 <br> <br> <br>
