--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(66, 55, 55); }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #f5f5f5;  }
 
 .text-center{
     text-align: center;
@@ -9,3 +9,39 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
     width: 100%;
     border-color: grey;
 }
+
+.ml20{
+    margin-left: 20px !important;
+  }
+  
+  .mr20{
+    margin-right: 20px !important;
+  }
+  
+  .mt20{
+    margin-top: 20px !important;
+  }
+  
+  .mb20{
+    margin-bottom: 20px !important;
+  }
+
+  .ml10{
+    margin-left: 10px !important;
+  }
+  
+  .mr10{
+    margin-right: 10px !important;
+  }
+  
+  .mt10{
+    margin-top: 10px !important;
+  }
+  
+  .mb10{
+    margin-bottom: 10px !important;
+  }
+
+  .ml70{
+    margin-left: 70px !important;
+  }
